# OOS1

./: README.md  Übung_printer  Übung_printer.cpp
Aufgabe10/: verleih  verleih.cpp
Aufgabe11/: ueberladenefunktonen2  ueberladenefunktonen2.cpp
Aufgabe12/: mehrfache_vererbung  mehrfache_vererbung.cpp
Aufgabe13/: Aufgabe.txt  CMakeLists.txt  Employee.h  Manager.h  Worker.cpp  Worker.h  main.cpp
Aufgabe14/: Aufgabe.txt  CMakeLists.txt  Employee.cpp  Manager.cpp  Worker.cpp  main.cpp
Aufgabe15/: Bubble-sort  Bubble-sort.cpp
Aufgabe16/: polygonline  polygonline.cpp
Aufgabe17/: virtual-funktions  virtual-funktions.cpp
Aufgabe18/: grosser-Verleih  grosser-Verleih.cpp
Aufgabe19/: abstrakte_klassen  abstrakte_klassen.cpp
Aufgabe20/: dependency_inversion  dependency_inversion.cpp
Aufgabe7/: klassen-ueben  klassen-ueben.cpp
Aufgabe8/: kreise  kreise.cpp
Aufgabe9/: Kalender  Kalender.cpp
